<resources>
    <string name="app_name">BrandonLab3</string>
    <string name="title_frag1"> 1: Brandon</string>
    <string name="title_frag2"> 2: Rodrigues</string>
    <string name="title_frag3"> 3: S301126222</string>
    <string name="no1">Fragment One</string>
    <string name="no2">Fragment Two</string>
    <string name="no3">Fragment Three</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="clear">Clear</string>
    <string name="update_brush">Update Brush</string>
    <string name="mario">Mario</string>
    <string name="brandon_rodrigues_301126222">Brandon Rodrigues 301126222</string>
    <string name="normal"> 2 sec.</string>
    <string name="_4x">0.5 sec.</string>
    <string name="_1_2">4 sec.</string>
    <string name="_2x">1 sec.</string>
    <string name="star_power">STAR POWERRRR!!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="star">Star</string>
    <string name="rodrigues">Rodrigues</string>
    <string name="brandon">Brandon</string>
    <string name="create_contact">Create Contact</string>

</resources>
<!-- Brandon Aaron Rodrigues 301126222 SEC.02 -->