<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="brandon.rodrigues.s301126222.ui.Brandon.BrandonFragment"
        android:label="@string/no1"
        tools:layout="@layout/fragment_brandon" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="brandon.rodrigues.s301126222.ui.Rodrigues.RodriguesFragment"
        android:label="@string/no2"
        tools:layout="@layout/fragment_rodrigues" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="brandon.rodrigues.s301126222.ui.S301126222.S301126222Fragment"
        android:label= "@string/no3"
        tools:layout="@layout/fragment_notifications" />
</navigation>